fix: #1057 add align to dropdown (#1142)
* fix: #1057 add align to dropdown

* fix: #1057 add font-size to item

* fix: #1057 fixed variable to border

* fix: #1057 fixed border token in dropdown

* fix: #1057 fixed dropdown style

--- a/mw-webapp/src/component/dropdown/Dropdown.module.scss
+++ b/mw-webapp/src/component/dropdown/Dropdown.module.scss
@@ -14,9 +14,9 @@ $dropdownIndentationBottom: 10px;
 .dropdownContent {
   position: absolute;
   z-index: $dropdownZIndex;
-  padding: $paddingMedium;
-  border: 1px solid var(--generalPrimaryColor);
-  background: var(--primaryBgColor);
-  list-style: none;
+  border: $primaryBorder solid var(--generalPrimaryColor);
+  border-radius: $primaryBorderRadius;
+  background: var(--tertiaryBgColor);
   transform: translateY($dropdownIndentationBottom);
+  list-style: none;
 }
